# DeepLearningProject

./: .gitignore  README.md  U_NET.py  attack.py  autoencoder copy.py  batch_training_history.pkl  bim.py  bim.txt  combined_results.csv  compare_attacks.py  denoiser.py  denoiser_evaluation.csv  evaluate_denoiser.py  fsgm.py  image_classifier.py  main.py  mnist_model.py  plot_training_history.py  poison_data.py  poisoned_data.csv  pyproject.toml  results.py  results_eps1.csv  results_eps10.csv  results_eps100.csv  results_eps15.csv  results_eps2.csv  results_eps20.csv  results_eps25.csv  results_eps3.csv  results_eps30.csv  results_eps35.csv  results_eps4.csv  results_eps40.csv  results_eps45.csv  results_eps5.csv  results_eps50.csv  results_eps55.csv  results_eps60.csv  results_eps65.csv  (+8 more)
denoiser/: batch_training_history.pkl  denoiser.py  plot_training_history.py  test_denoiser.py
tutorial/: fgsm_tutorial.ipynb
