[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["ICheered <tjeerd992@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
tensorflow = "^2.15"
matplotlib = "^3.8.2"
numpy = "^1.26.3"
torch = "^2.1.2"
torchvision = "^0.16.2"
ipykernel = "^6.28.0"
ipywidgets = "^8.1.1"
tqdm = "^4.66.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
