[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["ICheered <tjeerd992@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
tensorflow = "^2.15.0"
matplotlib = "^3.8.2"
ipykernel = "^6.28.0"
ipywidgets = "^8.1.1"
pandas = "^2.2.0"
torch = {version = "^2.1.2+rocm5.7", source = "pytorch-gpu-src"}
pytorch-triton-rocm = {version = "^2.2.0", source = "pytorch-gpu-src"}
torchvision = {version = "^0.17.0+rocm5.7", source = "pytorch-gpu-src"}
tqdm = "^4.66.1"
scikit-learn = "^1.4.0"
pyarrow = "^15.0.0"
pillow = "^10.2.0"

[[tool.poetry.source]]
name = "pytorch-gpu-src"
url = "https://download.pytorch.org/whl/rocm5.7"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
